# HTTP_low_level_c_server

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  server.c
src/connection_handling/: CMakeLists.txt  HttpConsts.h  connectionHandling.c  connectionHandling.h  requestParsing.c  requestParsing.h
src/io_helper/: CMakeLists.txt  io_helper.c  io_helper.h
src/web/src/: index.html
